Fix Postman Test.