@@ -16,8 +16,9 @@ import ru.practicum.event.repository.EventRepository;
 import ru.practicum.exception.BadRequestException;
 import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
+import ru.practicum.request.repository.RequestRepository;
+import ru.practicum.request.model.RequestStatus;
 import ru.practicum.stats.client.StatsClient;
-import ru.practicum.stats.dto.EndpointHitDto;
 import ru.practicum.stats.dto.ViewStatsDto;
 import ru.practicum.user.dto.UserShortDto;
 import ru.practicum.user.model.User;
@@ -37,6 +38,7 @@ public class EventService {
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final StatsClient statsClient;
+    private final RequestRepository requestRepository;
 
     // ==================== Вспомогательные методы маппинга ====================
 
@@ -45,7 +47,7 @@ public class EventService {
         dto.setId(event.getId());
         dto.setAnnotation(event.getAnnotation());
         dto.setCategory(toCategoryDto(event.getCategory()));
-        dto.setConfirmedRequests(event.getConfirmedRequests());
+        dto.setConfirmedRequests(requestRepository.countByEventIdAndStatus(event.getId(), RequestStatus.CONFIRMED));
         dto.setCreatedOn(event.getCreatedOn());
         dto.setDescription(event.getDescription());
         dto.setEventDate(event.getEventDate());
@@ -66,7 +68,7 @@ public class EventService {
         dto.setId(event.getId());
         dto.setAnnotation(event.getAnnotation());
         dto.setCategory(toCategoryDto(event.getCategory()));
-        dto.setConfirmedRequests(event.getConfirmedRequests());
+        dto.setConfirmedRequests(requestRepository.countByEventIdAndStatus(event.getId(), RequestStatus.CONFIRMED));
         dto.setEventDate(event.getEventDate());
         dto.setInitiator(toUserShort(event.getInitiator()));
         dto.setPaid(event.getPaid());
@@ -89,11 +91,10 @@ public class EventService {
         return dto;
     }
 
-    // ==================== PRIVATE API (для пользователей) ====================
+    // ==================== PRIVATE API ====================
 
     @Transactional
     public EventFullDto create(Long userId, NewEventDto dto) {
-        // Проверка: дата события не ранее, чем за 2 часа от текущего момента
         if (dto.getEventDate().isBefore(LocalDateTime.now().plusHours(2))) {
             throw new BadRequestException("Дата события должна быть не ранее чем через 2 часа от текущего момента");
         }
@@ -142,12 +143,10 @@ public class EventService {
                 .orElseThrow(() -> new NotFoundException(
                         "Событие с id=" + eventId + " не найдено у пользователя с id=" + userId));
 
-        // Можно изменять только отменённые или ожидающие модерацию события
         if (event.getState() != EventState.PENDING && event.getState() != EventState.CANCELED) {
             throw new ConflictException("Редактировать можно только отменённые или ожидающие модерацию события");
         }
 
-        // Обновление полей, если они не null
         if (dto.getAnnotation() != null) event.setAnnotation(dto.getAnnotation());
         if (dto.getCategory() != null) {
             Category category = categoryRepository.findById(dto.getCategory())
@@ -167,7 +166,6 @@ public class EventService {
         if (dto.getRequestModeration() != null) event.setRequestModeration(dto.getRequestModeration());
         if (dto.getTitle() != null) event.setTitle(dto.getTitle());
 
-        // Обработка изменения состояния
         if (dto.getStateAction() != null) {
             if (dto.getStateAction().equals("SEND_TO_REVIEW")) {
                 event.setState(EventState.PENDING);
@@ -184,7 +182,6 @@ public class EventService {
     public List<EventShortDto> searchPublic(String text, List<Long> categories, Boolean paid,
                                             LocalDateTime rangeStart, LocalDateTime rangeEnd,
                                             Boolean onlyAvailable, String sort, int from, int size) {
-
         Pageable pageable = PageRequest.of(from / size, size);
 
         if (rangeStart == null) rangeStart = LocalDateTime.now();
@@ -198,8 +195,7 @@ public class EventService {
                 rangeStart, rangeEnd, pageable);
 
         List<Event> events = eventPage.getContent();
-
-        enrichEventsWithViews(events);   // ← важно!
+        enrichEventsWithViews(events);
 
         return events.stream()
                 .map(this::toShortDto)
@@ -214,8 +210,7 @@ public class EventService {
             throw new NotFoundException("Событие с id=" + eventId + " не найдено");
         }
 
-        enrichEventsWithViews(List.of(event));   // ← важно!
-
+        enrichEventsWithViews(List.of(event));
         return toFullDto(event);
     }
 
@@ -240,7 +235,6 @@ public class EventService {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new NotFoundException("Событие с id=" + eventId + " не найдено"));
 
-        // Обновление полей, если они не null
         if (dto.getAnnotation() != null) event.setAnnotation(dto.getAnnotation());
         if (dto.getCategory() != null) {
             Category category = categoryRepository.findById(dto.getCategory())
@@ -249,9 +243,9 @@ public class EventService {
         }
         if (dto.getDescription() != null) event.setDescription(dto.getDescription());
         if (dto.getEventDate() != null) {
-            // При публикации дата события должна быть не ранее чем за 1 час
+            // Валидация: за час до публикации → теперь BadRequestException вместо ConflictException
             if (dto.getEventDate().isBefore(LocalDateTime.now().plusHours(1))) {
-                throw new ConflictException("Дата начала события должна быть не ранее чем за час от даты публикации");
+                throw new BadRequestException("Дата начала события должна быть не ранее чем за час от даты публикации");
             }
             event.setEventDate(dto.getEventDate());
         }
@@ -261,7 +255,6 @@ public class EventService {
         if (dto.getRequestModeration() != null) event.setRequestModeration(dto.getRequestModeration());
         if (dto.getTitle() != null) event.setTitle(dto.getTitle());
 
-        // Обработка изменения состояния (публикация/отклонение)
         if (dto.getStateAction() != null) {
             if (dto.getStateAction().equals("PUBLISH_EVENT")) {
                 if (event.getState() != EventState.PENDING) {
@@ -280,34 +273,14 @@ public class EventService {
         return toFullDto(eventRepository.save(event));
     }
 
-    // ==================== Методы для статистики ====================
-
-    public void saveHit(Long eventId, String ip) {
-        try {
-            statsClient.hit(EndpointHitDto.builder()
-                    .app("ewm-main-service")
-                    .uri("/events/" + eventId)
-                    .ip(ip)
-                    .timestamp(LocalDateTime.now())
-                    .build());
-        } catch (Exception e) {
-            System.err.println("Не удалось отправить hit для события " + eventId + ": " + e.getMessage());
-        }
-    }
-
-    public void saveHitForEvents(List<EventShortDto> events, String ip) {
-        if (events == null || events.isEmpty()) {
-            return;
-        }
-        events.forEach(event -> saveHit(event.getId(), ip));
-    }
+    // ==================== Статистика ====================
 
     private void enrichEventsWithViews(List<Event> events) {
         if (events.isEmpty()) return;
 
         List<String> uris = events.stream()
                 .map(event -> "/events/" + event.getId())
-                .toList();
+                .collect(Collectors.toList());
 
         try {
             List<ViewStatsDto> stats = statsClient.getStats(
